--- a/package.json
+++ b/package.json
@@ -30,5 +30,10 @@
   "bugs": {
     "url": "https://github.com/marcofranssen/socket.io-memcached/issues"
   },
-  "homepage": "https://github.com/marcofranssen/socket.io-memcached"
+  "homepage": "https://github.com/marcofranssen/socket.io-memcached",
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-contrib-jshint": "^0.10.0",
+    "grunt-contrib-watch": "^0.6.1"
+  }
 }
