--- a/package.json
+++ b/package.json
@@ -31,6 +31,10 @@
     "url": "https://github.com/marcofranssen/socket.io-memcached/issues"
   },
   "homepage": "https://github.com/marcofranssen/socket.io-memcached",
+  "dependencies": {
+    "debug": "^1.0.2",
+    "socket.io-adapter": "^0.3.0"
+  },
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-jshint": "^0.10.0",
