--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "homepage": "https://github.com/marcofranssen/socket.io-memcached",
   "dependencies": {
     "debug": "^1.0.2",
+    "memcached": "^0.2.8",
     "socket.io-adapter": "^0.3.0"
   },
   "devDependencies": {
